hphp/test/zend/good/ext/standard/tests/general_functions/usleep_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
}
