hphp/test/zend/bad/ext/standard/tests/strings/pack.php.skipif
<?php
if (PHP_INT_MAX > 2147483647) {
	die("skip 32bit test only");
}
?>